--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -102,6 +102,11 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Game/BattleCity/Core/BP_BattleCityMode.BP_BattleCityMode_C
+EditorStartupMap=/Game/BattleCity/Maps/Level01.Level01
+GameDefaultMap=/Game/BattleCity/Maps/Level01.Level01
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -147,7 +152,3 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
-
-[/Script/EngineSettings.GameMapsSettings]
-GlobalDefaultGameMode=/Game/BattleCity/Core/GM_BattleCity.GM_BattleCity_C
-
