--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -42,6 +42,12 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="Shoot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="Shoot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=NumPadZero)
++ActionMappings=(ActionName="Shoot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
++ActionMappings=(ActionName="Shoot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightTrigger)
++ActionMappings=(ActionName="Menu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
++ActionMappings=(ActionName="Menu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Right)
 +AxisMappings=(AxisName="Up&Down",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Left&Right",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="Up&Down",Scale=-1.000000,Key=S)
@@ -50,6 +56,12 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Up&Down",Scale=-1.000000,Key=Down)
 +AxisMappings=(AxisName="Left&Right",Scale=-1.000000,Key=Left)
 +AxisMappings=(AxisName="Left&Right",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="Up&Down",Scale=-1.000000,Key=Gamepad_RightY)
++AxisMappings=(AxisName="Left&Right",Scale=1.000000,Key=Gamepad_RightX)
++AxisMappings=(AxisName="Up&Down",Scale=1.000000,Key=Gamepad_DPad_Up)
++AxisMappings=(AxisName="Left&Right",Scale=-1.000000,Key=Gamepad_DPad_Left)
++AxisMappings=(AxisName="Left&Right",Scale=1.000000,Key=Gamepad_DPad_Right)
++AxisMappings=(AxisName="Up&Down",Scale=-1.000000,Key=Gamepad_DPad_Down)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
