Added walls and a system to spawn actors on the tilemap by placing them in the tilemap instead of the world

--- a/Config/DefaultEditor.ini
+++ b/Config/DefaultEditor.ini
@@ -3,9 +3,9 @@
 bEnable2DWidget=True
 bEnableSnapLayers=True
 SnapAxis=Y
-+SnapLayers=(Name="Foreground",Depth=200.000000)
-+SnapLayers=(Name="GameField",Depth=100.000000)
-+SnapLayers=(Name="Ground",Depth=0.000000)
-+SnapLayers=(Name="Background",Depth=-100.000000)
++SnapLayers=(Name="Foreground",Depth=0.000000)
++SnapLayers=(Name="Actors",Depth=-100.000000)
++SnapLayers=(Name="Ground",Depth=-200.000000)
++SnapLayers=(Name="Background",Depth=-300.000000)
 
 
