--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -65,7 +65,7 @@ DoubleClickTime=0.200000
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
-+ConsoleKeys=Tilde
++ConsoleKeys=^
 +ConsoleKeys=Caret
 
 
